--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    /* font-family: ; */
+    font-size: 20px;
 }
 
 body {
@@ -11,8 +14,11 @@ body {
 
 .mode {
     position: fixed;
-    top: 30px;
-    right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    bottom: 30px;
+    right: 5%;
     width: 60px;
     height: 60px;
     padding: 2px;
@@ -35,32 +41,33 @@ body {
     width: 75%;
     padding: 25px 0;
     display: flex;
-    align-items: center;
     flex-direction: column;
     gap: 25px;
     box-shadow: inset 0px 0px 100px 2px rgba(0, 0, 0, 0.644);    
 }
 
 .articles article {
-    width: 70%;
+    width: 80%;
+    min-width: 310px;
     min-height: 50vh;
     padding: 10px 10px 10px 5px;
     background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 5px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-left: 10px solid rgb(3, 126, 197);
     color: #252525;
 }
 
 .personal {
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 0; 
     width: 25%;
     min-width: 310px;
     height: 100vh;
     padding: 10px;
     background-color: #252525;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px; 
-    box-shadow: inset 0px 1px 0px 1px 5px white;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px; 
     color: white;
 }
