--- a/css/styles.css
+++ b/css/styles.css
@@ -2,35 +2,57 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: ; */
+    font-family: sans-serif; 
     font-size: 20px;
 }
 
 body {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #00333a;
 }
 
-.mode {
+#dark-mode-btn {
     position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    bottom: 30px;
-    right: 5%;
+    top: 30px;
+    right: 10px;
     width: 60px;
     height: 60px;
     padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.9); /* el color de fondo debe cambiar segun el modo en el que se encuentre la pagin */
-    box-shadow: 0 0 8px .5px rgba(255, 255, 255, 0.6);
+    box-shadow: 0 0 80px .5px rgba(255, 255, 255, 0.6);
+    font-weight: 500;
+    text-align: center;
     cursor: pointer;
-    transition: transform .5s, background-color 1s;
+    transition: transform .5s, background-color 1s, box-shadow 1s;
 }
 
-.mode:hover {
+/* INICIO - CONFIGURACION MODO OSCURO */
+.dark-mode {
+    background-color: #00BCD4;
+    color: #333;
+}
+.dark-mode .main .personal {
+    background-color: #c7fffa;
+    color: #333;
+}
+.dark-mode .main .articles {
+    box-shadow: inset 0px 0px 100px 2px rgba(255, 255, 255, 0.644);   
+}
+.dark-mode .main .articles article {
+    background-color: #008c9e;
+    color: azure;
+}
+/* FIN - CONFIGURACION MODO OSCURO */
+
+
+#dark-mode-btn:hover {
     transform: scaleX(115%) scaleY(89%);
+    box-shadow: 0 0 80px 1px rgba(205, 255, 126, 0.781);
 }
 
 .main {
@@ -51,7 +73,7 @@ body {
     min-width: 310px;
     min-height: 50vh;
     padding: 10px 10px 10px 5px;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #008c9e;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-left: 10px solid rgb(3, 126, 197);
@@ -62,12 +84,52 @@ body {
     position: -webkit-sticky;
     position: sticky;
     top: 0; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 40px;
+    align-items: center;
     width: 25%;
     min-width: 310px;
     height: 100vh;
     padding: 10px;
     background-color: #252525;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px; 
     color: white;
+    letter-spacing: 3px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.personal img {
+    width: 280px;
+    height: 280px;
+}
+
+.personal ul {
+    list-style: none;
+}
+
+.personal ul p {
+    position: relative;
+    margin: 30px;
+    cursor: pointer;
+    transition: transform .3s;
+}
+
+.personal ul p:hover {
+    transform: scale(130%);
+    color: #008c9e;
+}
+
+.personal a:link, a:visited, a:hover, a:active {
+    color: inherit;
+    text-decoration: none;
+}
+
+/* CONFIGUACION MEDIAS QUERIES (RESPONSIVE) */
+
+@media only screen and (max-width: 700px) {
+    body {
+      background-color: lightblue;
+    }
 }
