--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,12 @@ body {
     text-align: center;
 }
 
+.personal .titulo {
+
+    
+
+}
+
 .personal img {
     width: 280px;
     height: 280px;
