--- a/css/styles.css
+++ b/css/styles.css
@@ -1,171 +1,257 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;1,300;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Iso&family=Ubuntu:ital,wght@0,400;1,300;1,700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif; 
-    font-size: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 400;
+  text-align: center;
 }
 
 body {
-    width: 100%;
-    min-height: 100vh;
-    background-color: #00333a;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #00333a;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[10];
+      grid-template-columns: repeat(10, 1fr);
 }
 
-#dark-mode-btn {
-    position: fixed;
-    top: 30px;
-    right: 10px;
-    width: 65px;
-    height: 65px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: transform .5s, box-shadow .5s;
+.switch-btn {
+  position: fixed;
+  top: 30px;
+  right: 10px;
+  width: 60px;
+  height: 30px;
+  border: 2px solid #037ec5;
+  border-top-left-radius: 50% calc(65px/2);
+  border-bottom-left-radius: 50% calc(65px/2);
+  border-top-right-radius: 50% calc(65px/2);
+  border-bottom-right-radius: 50% calc(65px/2);
+  -webkit-transition: .6s, display 1s;
+  transition: .6s, display 1s;
+  cursor: pointer;
+}
+
+.switch-btn div {
+  width: 27px;
+  height: 27px;
+  background-color: #3ef6e6;
+  -webkit-box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.8);
+          box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.8);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 /* INICIO - CONFIGURACION MODO OSCURO */
-.sun-mode-btn {
-    background: url("../images/sol.png");
-    background-size: 120% 120%;
-    background-repeat: no-repeat;
-    background-position: center; 
-    box-shadow: 0 0 80px 1px rgba(236, 255, 126, 0.9);
-}
-.moon-mode-btn {
-    background: url("../images/luna.png");
-    background-size: 120% 120%;
-    background-repeat: no-repeat;
-    background-position: center; 
-    box-shadow: 0 0 80px 1px rgba(181, 197, 154, 0.8);
+.light-mode-btn {
+  background-color: red;
 }
 
-.light-mode-btn {
-    background-color: red;
-}
 .dark-mode {
-    background-color: #00BCD4;
-    color: #333;
+  background-color: #00BCD4;
+  color: #333;
 }
-.dark-mode .main .personal {
-    background-color: #c7fffa;
-    color: #333;
+
+.dark-mode .personal {
+  background-color: #c7fffa;
+  color: #333;
 }
-.dark-mode .main .articles {
-    box-shadow: inset 0px 0px 100px 2px rgba(255, 255, 255, 0.644);   
+
+.dark-mode .main .articles-container article {
+  background-color: white;
+  color: #252525;
 }
-.dark-mode .main .articles article {
-    background-color: #008c9e;
-    color: azure;
-}
-#dark-mode-btn:hover {
-    transform: scaleX(115%) scaleY(115%);
-    box-shadow: 0 0 120px 1px rgba(205, 255, 126, 0.8);
+
+.dark-mode .articles-container h1 {
+  color: black;
 }
 
 /* FIN - CONFIGURACION MODO OSCURO */
-
-.main {
-    display: flex;
-}
-
-/* Seccion configuracion de estilos de los articulos */
-
-.articles {
-    width: 75%;
-    padding: 25px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    box-shadow: inset 0px 0px 100px 2px rgba(0, 0, 0, 0.644);    
-}
-
-.articles article {
-    width: 80%;
-    min-width: 310px;
-    min-height: 500px;
-    padding: 10px 10px 10px 5px;
-    background-color: #008c9e;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-left: 10px solid rgb(3, 126, 197);
-    color: #252525;
-}
-
-/* Seccion habilidades */
-
-#skills {
-    height: 100%;
-    display: grid;
-}
-.skills-container {
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-.skill {
-    width: 90px;
-    height: 90px;
-    display: flex;
-}
-.skills img {
-    height: auto;
-    border: 1px solid red;
-}
-
-/* Seccion apartado personal */
-
 .personal {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 40px;
-    align-items: center;
-    width: 25%;
-    min-width: 310px;
-    height: 100vh;
-    padding: 10px;
-    background-color: #252525;
-    color: white;
-    letter-spacing: 3px;
-    font-weight: 600;
-    text-align: center;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 4;
+  min-width: 300px;
+  max-height: 100vh;
+  padding: 10px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #252525;
+  color: white;
 }
 
 .personal img {
-    width: 280px;
-    height: 280px;
+  width: 250px;
+  height: 250px;
+}
+
+a:link, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
 }
 
 .personal ul {
-    list-style: none;
+  list-style: none;
 }
 
 .personal ul p {
-    position: relative;
-    margin: 30px;
-    cursor: pointer;
-    transition: transform .3s;
+  position: relative;
+  margin: 10px;
+  cursor: pointer;
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
 }
 
 .personal ul p:hover {
-    transform: scale(130%);
-    color: #008c9e;
+  -webkit-transform: scale(130%);
+          transform: scale(130%);
+  color: #008c9e;
 }
 
-.personal a:link, a:visited, a:hover, a:active {
-    color: inherit;
-    text-decoration: none;
+.main {
+  -ms-grid-column: 4;
+      grid-column-start: 4;
+  grid-column-end: -1;
+}
+
+.articles-container {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+
+.articles-container article {
+  width: 100%;
+  min-width: 300px;
+  min-height: 50vh;
+  padding: 10px;
+  background-color: #008c9e;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-left: 10px solid #037ec5;
+  color: #252525;
+  overflow: hidden;
+}
+
+.articles-container article h1 {
+  height: 55px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid black;
+  font-family: 'Rubik Iso', cursive;
+  font-weight: 700;
+  font-size: 2rem;
+  text-align: end;
+  color: #00333a;
+}
+
+.articles-container article p {
+  font-size: 1.3rem;
+}
+
+/* SECCION DE HABILIDADES */
+.skills-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+
+.skills-container img {
+  width: 70px;
+  height: 70px;
+}
+
+/* FOOTER */
+.footer {
+  -ms-grid-column: 4;
+      grid-column-start: 4;
+  grid-column-end: -1;
+  min-height: 400px;
+  margin-top: 20px;
+  padding: 15px 5px;
+  background-color: #0c1115;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer h1 {
+  margin-bottom: 30px;
+  margin-left: 10px;
+  font-family: 'Rubik Iso', cursive;
+  font-weight: 500;
+  font-size: 2rem;
+  text-align: end;
+  text-transform: uppercase;
+  -webkit-text-decoration-style: wavy;
+          text-decoration-style: wavy;
+}
+
+.footer img {
+  width: 70px;
+  height: 70px;
+  margin: 8px 0;
+  cursor: pointer;
+}
+
+.footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
 }
 
 /* CONFIGUACION MEDIAS QUERIES (RESPONSIVE) */
-
 @media only screen and (max-width: 700px) {
-    body {
-      background-color: lightblue;
-    }
+  body {
+    background-color: red;
+  }
 }
+/*# sourceMappingURL=styles.css.map */
