--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,8 @@
 body {
   width: 100%;
   min-height: 100vh;
-  background-color: #00333a;
+  background-color: #00BCD4;
+  color: #333;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[10];
@@ -26,6 +27,13 @@ body {
   right: 10px;
   width: 60px;
   height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  background-color: #ffffffb3;
   border: 2px solid #037ec5;
   border-top-left-radius: 50% calc(65px/2);
   border-bottom-left-radius: 50% calc(65px/2);
@@ -47,27 +55,32 @@ body {
 }
 
 /* INICIO - CONFIGURACION MODO OSCURO */
-.light-mode-btn {
-  background-color: red;
+.dark-mode {
+  background-color: #00333a;
 }
 
-.dark-mode {
-  background-color: #00BCD4;
-  color: #333;
+.dark-mode .switch-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  background-color: #132029b3;
 }
 
 .dark-mode .personal {
-  background-color: #c7fffa;
-  color: #333;
+  background-color: #252525;
+  color: white;
 }
 
 .dark-mode .main .articles-container article {
-  background-color: white;
+  background-color: #008c9e;
   color: #252525;
 }
 
 .dark-mode .articles-container h1 {
-  color: black;
+  color: #00333a;
 }
 
 /* FIN - CONFIGURACION MODO OSCURO */
@@ -76,7 +89,7 @@ body {
       grid-column-start: 1;
   grid-column-end: 4;
   min-width: 300px;
-  max-height: 100vh;
+  height: 100vh;
   padding: 10px;
   position: -webkit-sticky;
   position: sticky;
@@ -95,8 +108,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #252525;
-  color: white;
+  background-color: #c7fffa;
+  color: #333;
+  -webkit-box-shadow: inset 0 0 10px black;
+          box-shadow: inset 0 0 10px black;
 }
 
 .personal img {
@@ -133,6 +148,7 @@ a:link, a:visited, a:hover, a:active {
   -ms-grid-column: 4;
       grid-column-start: 4;
   grid-column-end: -1;
+  margin-top: 1px;
 }
 
 .articles-container {
@@ -152,23 +168,22 @@ a:link, a:visited, a:hover, a:active {
   min-width: 300px;
   min-height: 50vh;
   padding: 10px;
-  background-color: #008c9e;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   border-left: 10px solid #037ec5;
+  background-color: white;
   color: #252525;
   overflow: hidden;
 }
 
 .articles-container article h1 {
-  height: 55px;
   margin-bottom: 10px;
   border-bottom: 2px solid black;
   font-family: 'Rubik Iso', cursive;
   font-weight: 700;
   font-size: 2rem;
   text-align: end;
-  color: #00333a;
+  color: black;
 }
 
 .articles-container article p {
@@ -249,9 +264,60 @@ a:link, a:visited, a:hover, a:active {
 }
 
 /* CONFIGUACION MEDIAS QUERIES (RESPONSIVE) */
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 950px) {
+  .personal {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: -1;
+    position: relative;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  .main {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: -1;
+    width: 100%;
+  }
+  .main #dark-mode-btn {
+    position: absolute;
+    top: 30px;
+    right: 15px;
+  }
+  .articles-container {
+    width: 95%;
+    margin: 0 auto;
+  }
+  article {
+    border-radius: 10px;
+  }
+  .footer {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: -1;
+  }
+}
+
+@media only screen and (max-width: 300px) {
   body {
-    background-color: red;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .main #dark-mode-btn {
+    position: absolute;
+    top: 30px;
+    right: 0;
+  }
+  .articles-container {
+    width: 100%;
+  }
+  article {
+    min-width: 150px;
+    border-radius: 5px;
+  }
+  .personal img {
+    width: auto;
+    height: 100px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
